--- a/deploy/chart/crds/security.everoute.io_securitypolicies.yaml
+++ b/deploy/chart/crds/security.everoute.io_securitypolicies.yaml
@@ -125,6 +125,10 @@ spec:
                             "key", the operator is "In", and the values array contains
                             only "value". The requirements are ANDed.
                           type: object
+                        matchNothing:
+                          description: MatchNothing does not match any labels when
+                            set to true
+                          type: boolean
                       type: object
                   type: object
                 type: array
@@ -236,6 +240,10 @@ spec:
                                   is "key", the operator is "In", and the values array
                                   contains only "value". The requirements are ANDed.
                                 type: object
+                              matchNothing:
+                                description: MatchNothing does not match any labels
+                                  when set to true
+                                type: boolean
                             type: object
                           ipBlock:
                             description: IPBlock defines policy on a particular IPBlock.
@@ -447,6 +455,10 @@ spec:
                                   is "key", the operator is "In", and the values array
                                   contains only "value". The requirements are ANDed.
                                 type: object
+                              matchNothing:
+                                description: MatchNothing does not match any labels
+                                  when set to true
+                                type: boolean
                             type: object
                           ipBlock:
                             description: IPBlock defines policy on a particular IPBlock.
@@ -625,6 +637,10 @@ spec:
                                   is "key", the operator is "In", and the values array
                                   contains only "value". The requirements are ANDed.
                                 type: object
+                              matchNothing:
+                                description: MatchNothing does not match any labels
+                                  when set to true
+                                type: boolean
                             type: object
                           ipBlock:
                             description: IPBlock defines policy on a particular IPBlock.
@@ -836,6 +852,10 @@ spec:
                                   is "key", the operator is "In", and the values array
                                   contains only "value". The requirements are ANDed.
                                 type: object
+                              matchNothing:
+                                description: MatchNothing does not match any labels
+                                  when set to true
+                                type: boolean
                             type: object
                           ipBlock:
                             description: IPBlock defines policy on a particular IPBlock.
