--- a/deploy/chart/templates/controller/controller.yaml
+++ b/deploy/chart/templates/controller/controller.yaml
@@ -22,6 +22,7 @@ spec:
         app: everoute
         component: everoute-controller
     spec:
+      hostNetwork: true
       nodeSelector:
         kubernetes.io/os: linux
       tolerations:
