--- a/deploy/chart/crds/security.everoute.io_endpoints.yaml
+++ b/deploy/chart/crds/security.everoute.io_endpoints.yaml
@@ -80,6 +80,7 @@ spec:
                       - TCP
                       - UDP
                       - ICMP
+                      - IPIP
                       type: string
                   type: object
                 type: array
