--- a/deploy/chart/crds/security.everoute.io_securitypolicies.yaml
+++ b/deploy/chart/crds/security.everoute.io_securitypolicies.yaml
@@ -350,6 +350,7 @@ spec:
                             - TCP
                             - UDP
                             - ICMP
+                            - IPIP
                             type: string
                           type:
                             default: number
@@ -747,6 +748,7 @@ spec:
                             - TCP
                             - UDP
                             - ICMP
+                            - IPIP
                             type: string
                           type:
                             default: number
