--- a/deploy/chart/crds/group.everoute.io_groupmemberspatches.yaml
+++ b/deploy/chart/crds/group.everoute.io_groupmemberspatches.yaml
@@ -68,6 +68,7 @@ spec:
                         - TCP
                         - UDP
                         - ICMP
+                        - IPIP
                         type: string
                     type: object
                   type: array
@@ -148,6 +149,7 @@ spec:
                         - TCP
                         - UDP
                         - ICMP
+                        - IPIP
                         type: string
                     type: object
                   type: array
@@ -203,6 +205,7 @@ spec:
                         - TCP
                         - UDP
                         - ICMP
+                        - IPIP
                         type: string
                     type: object
                   type: array
