feat: peer support disable symmetric

--- a/deploy/chart/crds/security.everoute.io_securitypolicies.yaml
+++ b/deploy/chart/crds/security.everoute.io_securitypolicies.yaml
@@ -163,6 +163,11 @@ spec:
                           traffic to/from. Only certain combinations of fields are
                           allowed
                         properties:
+                          disableSymmetric:
+                            description: DisableSymmetric if set true, won't generate
+                              symmetric rules for the peer even if SymmetricMode of
+                              policy set true, the default value is false
+                            type: boolean
                           endpoint:
                             description: Endpoint defines policy on a specific Endpoint.
                               If this field is set then neither of the other fields
@@ -378,6 +383,11 @@ spec:
                           traffic to/from. Only certain combinations of fields are
                           allowed
                         properties:
+                          disableSymmetric:
+                            description: DisableSymmetric if set true, won't generate
+                              symmetric rules for the peer even if SymmetricMode of
+                              policy set true, the default value is false
+                            type: boolean
                           endpoint:
                             description: Endpoint defines policy on a specific Endpoint.
                               If this field is set then neither of the other fields
@@ -560,6 +570,11 @@ spec:
                           traffic to/from. Only certain combinations of fields are
                           allowed
                         properties:
+                          disableSymmetric:
+                            description: DisableSymmetric if set true, won't generate
+                              symmetric rules for the peer even if SymmetricMode of
+                              policy set true, the default value is false
+                            type: boolean
                           endpoint:
                             description: Endpoint defines policy on a specific Endpoint.
                               If this field is set then neither of the other fields
@@ -775,6 +790,11 @@ spec:
                           traffic to/from. Only certain combinations of fields are
                           allowed
                         properties:
+                          disableSymmetric:
+                            description: DisableSymmetric if set true, won't generate
+                              symmetric rules for the peer even if SymmetricMode of
+                              policy set true, the default value is false
+                            type: boolean
                           endpoint:
                             description: Endpoint defines policy on a specific Endpoint.
                               If this field is set then neither of the other fields
