--- a/deploy/everoute.yaml
+++ b/deploy/everoute.yaml
@@ -1055,6 +1055,11 @@ spec:
                           traffic to/from. Only certain combinations of fields are
                           allowed
                         properties:
+                          disableSymmetric:
+                            description: DisableSymmetric if set true, won't generate
+                              symmetric rules for the peer even if SymmetricMode of
+                              policy set true, the default value is false
+                            type: boolean
                           endpoint:
                             description: Endpoint defines policy on a specific Endpoint.
                               If this field is set then neither of the other fields
@@ -1270,6 +1275,11 @@ spec:
                           traffic to/from. Only certain combinations of fields are
                           allowed
                         properties:
+                          disableSymmetric:
+                            description: DisableSymmetric if set true, won't generate
+                              symmetric rules for the peer even if SymmetricMode of
+                              policy set true, the default value is false
+                            type: boolean
                           endpoint:
                             description: Endpoint defines policy on a specific Endpoint.
                               If this field is set then neither of the other fields
@@ -1452,6 +1462,11 @@ spec:
                           traffic to/from. Only certain combinations of fields are
                           allowed
                         properties:
+                          disableSymmetric:
+                            description: DisableSymmetric if set true, won't generate
+                              symmetric rules for the peer even if SymmetricMode of
+                              policy set true, the default value is false
+                            type: boolean
                           endpoint:
                             description: Endpoint defines policy on a specific Endpoint.
                               If this field is set then neither of the other fields
@@ -1667,6 +1682,11 @@ spec:
                           traffic to/from. Only certain combinations of fields are
                           allowed
                         properties:
+                          disableSymmetric:
+                            description: DisableSymmetric if set true, won't generate
+                              symmetric rules for the peer even if SymmetricMode of
+                              policy set true, the default value is false
+                            type: boolean
                           endpoint:
                             description: Endpoint defines policy on a specific Endpoint.
                               If this field is set then neither of the other fields
