--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -45,6 +45,10 @@ jobs:
     runs-on: [ubuntu-20.04]
     if: ${{ github.event_name == 'pull_request' }}
     steps:
+      - uses: actions/setup-go@v3
+        with:
+          go-version: '1.17'
+
       - uses: actions/checkout@v2
 
       - uses: golangci/golangci-lint-action@v3
