feat(cni): add controller config

--- a/deploy/chart/values.yaml
+++ b/deploy/chart/values.yaml
@@ -11,6 +11,7 @@ enableCNI: true
 CNIConf:
   localGwIP: 100.64.254.254
   enableProxy: false
+  encapMode: ""
 
 webhook:
   type: Service # enum: Service, URL
